# ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
.cache/clangd/index/: Animation.cpp.F3833513E6EA6F80.idx  Animation.hpp.5C5C1B0145FE43E1.idx  BatchInfo.hpp.B3F2648574170C79.idx  Exception.hpp.CA5D9EF39C6826D1.idx  GeometryNode.cpp.526F1800BC577F99.idx  GeometryNode.hpp.03C06ED8299C8A1B.idx  Image.cpp.A4EDEC22483A6404.idx  Image.hpp.A1F61435C24CFCFB.idx  JointNode.cpp.FBC8E0C006F2AB0D.idx  JointNode.hpp.8EF68E8B9C6F9746.idx  Light.cpp.43C518A3507CF2BB.idx  Light.hpp.98F114658E860B7E.idx  Main.cpp.9B90DD3FC0CA4A65.idx  Material.cpp.4388918743786873.idx  Material.hpp.303B86217E4B8554.idx  MathUtils.hpp.F9C9EE8A4FCA2CCD.idx  Mesh.cpp.612667C70822F635.idx  Mesh.hpp.BD92410C00570EC2.idx  MeshConsolidator.cpp.DF5E44C787B01A26.idx  MeshConsolidator.hpp.8879D29F84900926.idx  ObjFileDecoder.cpp.BFAF1FFBA2BA380D.idx  ObjFileDecoder.hpp.94EE9D42C027EEB3.idx  ParticleNode.cpp.EC75B328F642A1E7.idx  ParticleNode.hpp.F50D611A5FAE3DE5.idx  PhongMaterial.cpp.87871CC5BD748979.idx  PhongMaterial.hpp.8E5C1EE2C0AAF01C.idx  Primitive.cpp.C0F0363CB3CDE220.idx  Primitive.hpp.32B4D0F5AA71460F.idx  Ray.cpp.553D2DBFA8A59E85.idx  Ray.hpp.3484C426D4E95465.idx  RayTracer.cpp.9BE7CAC93A4C378A.idx  RayTracer.hpp.B903DB16223B3665.idx  SceneNode.cpp.DAD70FC68F8EA6E8.idx  SceneNode.hpp.7997D5883BE213E8.idx  _fixes.hpp.7E0648F50856C84C.idx  _noise.hpp.28B91D68053B5982.idx  _vectorize.hpp.1DA394808F314F19.idx  associated_min_max.hpp.9B7A840533266679.idx  associated_min_max.inl.08FA6D7D62A44B07.idx  bit.hpp.16B761D217C42F9A.idx  (+211 more)
src/: GeometryNode.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  ParticleNode.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Primitive.cpp  Primitive.hpp  Ray.hpp  RayTracer.hpp  SceneNode.cpp  SceneNode.hpp  polyroots.cpp  polyroots.hpp  premake5.lua  scene_lua.cpp
src/animation/: Animation.cpp  Animation.hpp
src/assets/: A5_Scene.blend  animation.lua
src/core/: Main.cpp  Ray.cpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp
src/geometry/: GeometryNode.cpp  GeometryNode.hpp  JointNode.cpp  JointNode.hpp  Primitive.cpp  Primitive.hpp  SceneNode.cpp  SceneNode.hpp
src/lighting/: Light.cpp  Light.hpp
src/materials/: Material.cpp  Material.hpp  PhongMaterial.cpp  PhongMaterial.hpp
src/particles/: ParticleNode.cpp  ParticleNode.hpp
src/tests/: hier.lua  mucho-macho-cows.lua  nonhier-par.lua  nonhier-ref.lua  nonhier.lua
src/utils/: Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  lua.hpp  scene_lua.cpp
tests/: animation.lua  hier.lua  mucho-macho-cows.lua  nonhier-par.lua  nonhier-ref.lua  nonhier.lua
